--- a/01-html/02-images.html
+++ b/01-html/02-images.html
@@ -9,6 +9,22 @@
   <body>
     <main>
       <!-- Add your code here -->
+      <figure>
+        <img src="http://placekitten.com/g/200/150" 
+        alt="picture of cat"
+        width="200"
+        height="150"
+        />
+        <figcaption>Kittens Rule!</figcaption>
+      </figure>
+      <figure>
+        <img src="http://place-puppy.com/g/200x150" 
+        alt="picture of dog"
+        width="200"
+        height="150"
+        />
+        <figcaption>Puppies Rule!</figcaption>
+      </figure>
     </main>
   </body>
 </html>
