--- a/03-css/06-media-queries.html
+++ b/03-css/06-media-queries.html
@@ -13,8 +13,9 @@
       <nav>
         <ul>
           <li><a href="#">home</a></li>
-          <li><a href="#">parmesan</a></li>
-          <li><a href="#">manchego</a></li>
+          <li><a href="#parmesan">parmesan</a></li>
+          <li><a href="#manchego">manchego</a></li>
+          <li><a href="#chedder">chedder</a></li>
         </ul>
       </nav>
     </header>
@@ -33,6 +34,38 @@
         <h3>manchego</h3>
         <p>
           Boursin cheese and biscuits fondue. St. agur blue cheese manchego
+          airedale bavarian bergkase jarlsberg bocconcini cottage cheese cheese
+          and wine. Dolcelatte fromage frais goat hard cheese the big cheese
+          bocconcini cheese strings macaroni cheese. Cottage cheese goat cow
+          feta red leicester cream cheese brie.
+        </p>
+      </section>
+      <section id="chedder">
+        <h3>chedder</h3>
+        <p>
+          Boursin cheese and biscuits fondue. St. agur blue cheese manchego
+          airedale bavarian bergkase jarlsberg bocconcini cottage cheese cheese
+          and wine. Dolcelatte fromage frais goat hard cheese the big cheese
+          bocconcini cheese strings macaroni cheese. Cottage cheese goat cow
+          feta red leicester cream cheese brie. Boursin cheese and biscuits fondue. St. agur blue cheese manchego
+          airedale bavarian bergkase jarlsberg bocconcini cottage cheese cheese
+          and wine. Dolcelatte fromage frais goat hard cheese the big cheese
+          bocconcini cheese strings macaroni cheese. Cottage cheese goat cow
+          feta red leicester cream cheese brie.
+          Boursin cheese and biscuits fondue. St. agur blue cheese manchego
+          airedale bavarian bergkase jarlsberg bocconcini cottage cheese cheese
+          and wine. Dolcelatte fromage frais goat hard cheese the big cheese
+          bocconcini cheese strings macaroni cheese. Cottage cheese goat cow
+          feta red leicester cream cheese brie. Boursin cheese and biscuits fondue. St. agur blue cheese manchego
+          airedale bavarian bergkase jarlsberg bocconcini cottage cheese cheese
+          and wine. Dolcelatte fromage frais goat hard cheese the big cheese
+          bocconcini cheese strings macaroni cheese. Cottage cheese goat cow
+          feta red leicester cream cheese brie.
+          Boursin cheese and biscuits fondue. St. agur blue cheese manchego
+          airedale bavarian bergkase jarlsberg bocconcini cottage cheese cheese
+          and wine. Dolcelatte fromage frais goat hard cheese the big cheese
+          bocconcini cheese strings macaroni cheese. Cottage cheese goat cow
+          feta red leicester cream cheese brie. Boursin cheese and biscuits fondue. St. agur blue cheese manchego
           airedale bavarian bergkase jarlsberg bocconcini cottage cheese cheese
           and wine. Dolcelatte fromage frais goat hard cheese the big cheese
           bocconcini cheese strings macaroni cheese. Cottage cheese goat cow
