--- a/06-bootstrap/01-cards.html
+++ b/06-bootstrap/01-cards.html
@@ -12,7 +12,32 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>01 - Cards</h1>
-    <!-- Add your code here -->
+    <main class="container mt-5">
+      <h1 class="mb-4">01 - Bootstrap Cards</h1>
+      <div class="card d-inline-block w-25">
+        <div class="card-header">Featured</div>
+        <div class="box bg-secondary"></div>
+        <div class="card-body">
+          <h5 class="card-title">Speacial Title Treatment</h5>
+          <p class="card-text">
+            Some quick example text to build on the card title and make up the bulk of the card's content.
+          </p>
+          <button class="btn btn-primary">Click Me</button>
+        </div>
+        <div class="card-footer">Last updated 3 minutes ago</div>
+      </div>
+      <div class="card d-inline-block w-25">
+        <div class="card-header">Featured</div>
+        <div class="box bg-secondary"></div>
+        <div class="card-body">
+          <h5 class="card-title">Speacial Title Treatment</h5>
+          <p class="card-text">
+            Some quick example text to build on the card title and make up the bulk of the card's content.
+          </p>
+          <button class="btn btn-primary">Click Me</button>
+        </div>
+        <div class="card-footer">Last updated 3 minutes ago</div>
+      </div>
+    </main>>
   </body>
 </html>
