--- a/06-bootstrap/04-modal.html
+++ b/06-bootstrap/04-modal.html
@@ -12,7 +12,24 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
   </head>
   <body>
-    <h1>04 - Bootstrap Modal</h1>
-    <!-- Add your code here -->
+    <main class="container">
+      <div class="text-center mxauto">
+        <h1 class="my-4">04 - Bootstrap Modal</h1>
+        <!-- Add your code here -->
+        <div class="mb-4">Click on the button below for more information insade a modal</div>
+        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal">More Details</button>
+      </div>
+      <div class="modal fade mt-4" id="modal">
+        <div class="modal-dialog">
+          <div class="model-content">
+            <div class="modal-header"></div>
+            <div class="modal-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ornare tristique orci, ac iaculis sapien. Fusce id aliquet felis, quis auctor ex. Donec ullamcorper eu ipsum non tristique. Morbi fringilla nulla mollis justo placerat facilisis. </div>
+            <div class="modal-footer">
+              <h5>This is the footer</h5>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
